# word-recognition

./: .gitignore  README.md  model-expert.md  pyproject.toml
word_recognition/: hello.py  model.py  whiteboard.py
