[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "word-recognition"
version = "0.1.0"
requires-python = ">= 3.12"
dependencies = [
  "pandas >= 2.2",
  "numpy >= 1.26",
  "pillow >= 10.3",
  "opencv-python >= 4.9",
  "imutils >= 0.5",
  "scipy >= 1.13",
  "tensorflow >= 2.16",
  "matplotlib >= 3.8",
  "scikit-learn >= 1.4",
]

[project.scripts]
word-recognition = "word_recognition.hello:hello_world"
whiteboard = "word_recognition.whiteboard:main"
train = "word_recognition.model:train"
test = "word_recognition.model:test"
